message(STATUS "Building rpi_motioncam test programs")
include_directories("${BROADCOM_INCLUDE_DIRS}")
include_directories("${MMAL_INCLUDE_DIRS}")
include_directories("../")
add_executable(rpi_motioncam_preview RPiMotionCamPreview.cpp)
add_executable(rpi_overlay RPiOverlay.cpp)
add_executable(test_rectangles RectangleDetect.cpp)
add_executable(gui_preview GuiPreview.cpp)
target_link_libraries(rpi_overlay rpi_motioncam)
target_link_libraries(rpi_motioncam_preview rpi_motioncam)
target_link_libraries(test_rectangles rpi_motioncam)
target_link_libraries(gui_preview rpi_motioncam)

